--- a/src/config.json
+++ b/src/config.json
@@ -10,21 +10,22 @@
     "FILE_DIR": "../final_weather_data/",
 
     // "ISO_LIST": ["CISO", "PJM", "ERCO", "ISNE", "SE", "DE"],
-    "ISO_LIST": ["ERCO"],
+    "ISO_LIST": ["CISO"],
     "NUM_TEST_DAYS": 184, //last 6 months of 2021
     "NUM_VAL_DAYS": 181, // first 6 months of 2021, make it 181 if OUT_WINDOW_LEN is 24
     "MODEL_SLIDING_WINDOW_LEN": 24, 
     "TRAINING_WINDOW_HOURS": 24, 
     "PREDICTION_WINDOW_HOURS": 24,
+    "MAX_PREDICTION_WINDOW_HOURS": 24,
     "TOP_N_FEATURES": 5,
     "NUMBER_OF_EXPERIMENTS_PER_ISO": 3,
 
     "CISO": {
         // "IN_FILE_NAME": "../data/CISO/CISO_forecast_carbon.csv",
-        "IN_FILE_NAME": "../data/CISO/CISO_forecast_carbon_linear_reg.csv",
+        "IN_FILE_NAME": "../data/CISO/CISO_forecast_carbon_direct.csv",
         "LOCAL_TIMEZONE": "US/Pacific",
         // "NUM_FEATURES": 24, // only solar wind forecasts with CNN. Others also changed
-        "NUM_FEATURES": 24,
+        "NUM_FEATURES": 21,
         "START_COL": 3
     },
 
@@ -37,9 +38,9 @@
     },
 
     "ERCO": {
-        "IN_FILE_NAME": "../data/ERCO/ERCO_forecast_carbon.csv",
+        "IN_FILE_NAME": "../data/ERCO/ERCO_forecast_carbon_direct.csv",
         "LOCAL_TIMEZONE": "US/Central",
-        "NUM_FEATURES": 24,
+        "NUM_FEATURES": 13,
         // "NUM_FEATURES": 20,
         "START_COL": 3
     },
@@ -61,10 +62,10 @@
     },
 
     "DE": {
-        "IN_FILE_NAME": "../data/DE/DE_forecast_carbon_linear_reg.csv",
+        "IN_FILE_NAME": "../data/DE/DE_forecast_carbon_direct.csv",
         "LOCAL_TIMEZONE": "CET",
         // "NUM_FEATURES": 31,
-        "NUM_FEATURES": 23,
+        "NUM_FEATURES": 31,
         "START_COL": 1
     },
 
