--- a/src/secondTierConfig.json
+++ b/src/secondTierConfig.json
@@ -8,7 +8,9 @@
         "AFFILIATION": "University of Massachusetts, Amherst"
     },
 
-    "REGION": ["DE"], // ["CISO", "PJM", "ERCO", "ISNE", "SE", "DE"],
+    // Regions: CISO, PJM, ERCO, ISNE, NYISO, FPL, BPAT, SE, DE, ES, NL, PL, AUS_QLD
+    // Can include multiple regions in the list, separated by comma.    
+    "REGION": ["CISO"],
     "NUM_TEST_DAYS": 181, //last 6 months of 2021
     "NUM_VAL_DAYS": 181, // first 6 months of 2021, make it 181 if OUT_WINDOW_LEN is 24
     "MODEL_SLIDING_WINDOW_LEN": 24, 
@@ -16,7 +18,7 @@
     "PREDICTION_WINDOW_HOURS": 96,
     "MAX_PREDICTION_WINDOW_HOURS": 96,
     "TOP_N_FEATURES": 10,
-    "NUMBER_OF_EXPERIMENTS_PER_REGION": 1,
+    "NUMBER_OF_EXPERIMENTS_PER_REGION": 3,
 
     "SECOND_TIER_CNN_LSTM_MODEL_HYPERPARAMS": {
         "EPOCH": 100,
@@ -112,12 +114,84 @@
     },
 
     "AUS_QLD": {
-        "LIFECYCLE_CEF_IN_FILE_NAME": "../extn/AUS_QLD/AUS_QLD_lifecycle_emissions.csv",
-        "DIRECT_CEF_IN_FILE_NAME": "../extn/AUS_QLD/AUS_QLD_direct_emissions.csv",
-        "FORECAST_IN_FILE_NAME": "../extn/AUS_QLD/AUS_QLD_96hr_forecasts_DA.csv",
+        "LIFECYCLE_CEF_IN_FILE_NAME": "../data/AUS_QLD/AUS_QLD_lifecycle_emissions.csv",
+        "DIRECT_CEF_IN_FILE_NAME": "../data/AUS_QLD/AUS_QLD_direct_emissions.csv",
+        "FORECAST_IN_FILE_NAME": "../data/AUS_QLD/AUS_QLD_96hr_forecasts_DA.csv",
         "LIFECYCLE_CEF_OUT_FILE_NAME_PREFIX": "../data/AUS_QLD/AUS_QLD_lifecycle_96hr_CI_forecasts",
         "DIRECT_CEF_OUT_FILE_NAME_PREFIX": "../data/AUS_QLD/AUS_QLD_direct_96hr_CI_forecasts",
         "LOCAL_TIMEZONE": "UTC", // what is the time zone for AUS_QLD?
+        "NUM_FEATURES": 6,
+        "NUM_FORECAST_FEATURES": 12,
+        "START_COL": 1
+    },
+
+    "BPAT": {
+        "LIFECYCLE_CEF_IN_FILE_NAME": "../data/BPAT/BPAT_lifecycle_emissions.csv",
+        "DIRECT_CEF_IN_FILE_NAME": "../data/BPAT/BPAT_direct_emissions.csv",
+        "FORECAST_IN_FILE_NAME": "../data/BPAT/BPAT_96hr_forecasts.csv",
+        "LIFECYCLE_CEF_OUT_FILE_NAME_PREFIX": "../data/BPAT/BPAT_lifecycle_96hr_CI_forecasts",
+        "DIRECT_CEF_OUT_FILE_NAME_PREFIX": "../data/BPAT/BPAT_direct_96hr_CI_forecasts",
+        "LOCAL_TIMEZONE": "US/Pacific",
+        "NUM_FEATURES": 6,
+        "NUM_FORECAST_FEATURES": 11,
+        "START_COL": 1
+    },
+
+    "ES": {
+        "LIFECYCLE_CEF_IN_FILE_NAME": "../data/ES/ES_lifecycle_emissions.csv",
+        "DIRECT_CEF_IN_FILE_NAME": "../data/ES/ES_direct_emissions.csv",
+        "FORECAST_IN_FILE_NAME": "../data/ES/ES_96hr_forecasts.csv",
+        "LIFECYCLE_CEF_OUT_FILE_NAME_PREFIX": "../data/ES/ES_lifecycle_96hr_CI_forecasts",
+        "DIRECT_CEF_OUT_FILE_NAME_PREFIX": "../data/ES/ES_direct_96hr_CI_forecasts",
+        "LOCAL_TIMEZONE": "CET",
+        "NUM_FEATURES": 6,
+        "NUM_FORECAST_FEATURES": 14,
+        "START_COL": 1
+    },
+
+    "FPL": {
+        "LIFECYCLE_CEF_IN_FILE_NAME": "../data/FPL/FPL_lifecycle_emissions.csv",
+        "DIRECT_CEF_IN_FILE_NAME": "../data/FPL/FPL_direct_emissions.csv",
+        "FORECAST_IN_FILE_NAME": "../data/FPL/FPL_96hr_forecasts.csv",
+        "LIFECYCLE_CEF_OUT_FILE_NAME_PREFIX": "../data/FPL/FPL_lifecycle_96hr_CI_forecasts",
+        "DIRECT_CEF_OUT_FILE_NAME_PREFIX": "../data/FPL/FPL_direct_96hr_CI_forecasts",
+        "LOCAL_TIMEZONE": "US/Eastern",
+        "NUM_FEATURES": 6,
+        "NUM_FORECAST_FEATURES": 9,
+        "START_COL": 1
+    },
+
+    "NYISO": {
+        "LIFECYCLE_CEF_IN_FILE_NAME": "../data/NYISO/NYISO_lifecycle_emissions.csv",
+        "DIRECT_CEF_IN_FILE_NAME": "../data/NYISO/NYISO_direct_emissions.csv",
+        "FORECAST_IN_FILE_NAME": "../data/NYISO/NYISO_96hr_forecasts.csv",
+        "LIFECYCLE_CEF_OUT_FILE_NAME_PREFIX": "../data/NYISO/NYISO_lifecycle_96hr_CI_forecasts",
+        "DIRECT_CEF_OUT_FILE_NAME_PREFIX": "../data/NYISO/NYISO_direct_96hr_CI_forecasts",
+        "LOCAL_TIMEZONE": "US/Eastern",
+        "NUM_FEATURES": 6,
+        "NUM_FORECAST_FEATURES": 11,
+        "START_COL": 1
+    },
+
+    "PL": {
+        "LIFECYCLE_CEF_IN_FILE_NAME": "../data/PL/PL_lifecycle_emissions.csv",
+        "DIRECT_CEF_IN_FILE_NAME": "../data/PL/PL_direct_emissions.csv",
+        "FORECAST_IN_FILE_NAME": "../data/PL/PL_96hr_forecasts.csv",
+        "LIFECYCLE_CEF_OUT_FILE_NAME_PREFIX": "../data/PL/PL_lifecycle_96hr_CI_forecasts",
+        "DIRECT_CEF_OUT_FILE_NAME_PREFIX": "../data/PL/PL_direct_96hr_CI_forecasts",
+        "LOCAL_TIMEZONE": "CET",
+        "NUM_FEATURES": 6,
+        "NUM_FORECAST_FEATURES": 12,
+        "START_COL": 1
+    },
+
+    "NL": {
+        "LIFECYCLE_CEF_IN_FILE_NAME": "../data/NL/NL_lifecycle_emissions.csv",
+        "DIRECT_CEF_IN_FILE_NAME": "../data/NL/NL_direct_emissions.csv",
+        "FORECAST_IN_FILE_NAME": "../data/NL/NL_96hr_forecasts.csv",
+        "LIFECYCLE_CEF_OUT_FILE_NAME_PREFIX": "../data/NL/NL_lifecycle_96hr_CI_forecasts",
+        "DIRECT_CEF_OUT_FILE_NAME_PREFIX": "../data/NL/NL_direct_96hr_CI_forecasts",
+        "LOCAL_TIMEZONE": "CET",
         "NUM_FEATURES": 6,
         "NUM_FORECAST_FEATURES": 12,
         "START_COL": 1
