[DM] Updated second tier code
	-- Updated second tier configuration file. Changed the CI forecast file
		saving location. Added parameter to enable/disable writing
		forecasts to file. Added saved model location.
	-- Fixed minor error in config file.
	-- Updated second tier main src file. It can now run pre-trained models
		if -s is specified in the commandline.

--- a/src/secondTierConfig.json
+++ b/src/secondTierConfig.json
@@ -10,7 +10,7 @@
 
     // Regions: CISO, PJM, ERCO, ISNE, NYISO, FPL, BPAT, SE, DE, ES, NL, PL, AUS_QLD
     // Can include multiple regions in the list, separated by comma.    
-    "REGION": ["CISO"],
+    "REGION": ["NL", "AUS_QLD"],
     "NUM_TEST_DAYS": 181, //last 6 months of 2021
     "NUM_VAL_DAYS": 181, // first 6 months of 2021, make it 181 if OUT_WINDOW_LEN is 24
     "MODEL_SLIDING_WINDOW_LEN": 24, 
@@ -19,6 +19,9 @@
     "MAX_PREDICTION_WINDOW_HOURS": 96,
     "TOP_N_FEATURES": 10,
     "NUMBER_OF_EXPERIMENTS_PER_REGION": 3,
+    "LIFECYCLE_SAVED_MODEL_LOCATION": "../saved_second_tier_models/lifecycle/",
+    "DIRECT_SAVED_MODEL_LOCATION": "../saved_second_tier_models/direct/",
+    "WRITE_CI_FORECASTS_TO_FILE": "False",
 
     "SECOND_TIER_CNN_LSTM_MODEL_HYPERPARAMS": {
         "EPOCH": 100,
@@ -45,8 +48,8 @@
         "LIFECYCLE_CEF_IN_FILE_NAME": "../data/CISO/CISO_lifecycle_emissions.csv",
         "DIRECT_CEF_IN_FILE_NAME": "../data/CISO/CISO_direct_emissions.csv",
         "FORECAST_IN_FILE_NAME": "../data/CISO/CISO_96hr_forecasts_DA.csv",
-        "LIFECYCLE_CEF_OUT_FILE_NAME_PREFIX": "../data/CISO/CISO_lifecycle_96hr_CI_forecasts",
-        "DIRECT_CEF_OUT_FILE_NAME_PREFIX": "../data/CISO/CISO_direct_96hr_CI_forecasts",
+        "LIFECYCLE_CEF_OUT_FILE_NAME_PREFIX": "../CI_forecast_data/CISO/CISO_lifecycle_96hr_CI_forecasts",
+        "DIRECT_CEF_OUT_FILE_NAME_PREFIX": "../CI_forecast_data/CISO/CISO_direct_96hr_CI_forecasts",
         "LOCAL_TIMEZONE": "US/Pacific",
         "NUM_FEATURES": 6,
         "NUM_FORECAST_FEATURES": 12, // try next with 11, 12
@@ -57,8 +60,8 @@
         "LIFECYCLE_CEF_IN_FILE_NAME": "../data/PJM/PJM_lifecycle_emissions.csv",
         "DIRECT_CEF_IN_FILE_NAME": "../data/PJM/PJM_direct_emissions.csv",
         "FORECAST_IN_FILE_NAME": "../data/PJM/PJM_96hr_forecasts_DA.csv",
-        "LIFECYCLE_CEF_OUT_FILE_NAME_PREFIX": "../data/PJM/PJM_lifecycle_96hr_CI_forecasts",
-        "DIRECT_CEF_OUT_FILE_NAME_PREFIX": "../data/PJM/PJM_direct_96hr_CI_forecasts",
+        "LIFECYCLE_CEF_OUT_FILE_NAME_PREFIX": "../CI_forecast_data/PJM/PJM_lifecycle_96hr_CI_forecasts",
+        "DIRECT_CEF_OUT_FILE_NAME_PREFIX": "../CI_forecast_data/PJM/PJM_direct_96hr_CI_forecasts",
         "LOCAL_TIMEZONE": "US/Eastern",
         "NUM_FEATURES": 6, 
         "NUM_FORECAST_FEATURES": 13, 
@@ -67,10 +70,10 @@
 
     "ERCO": {
         "LIFECYCLE_CEF_IN_FILE_NAME": "../data/ERCO/ERCO_lifecycle_emissions.csv",
-        "DIRECT_CEF_IN_FILE_NAME": "../data/ERCO/noise/ERCO_direct_emissions.csv",
+        "DIRECT_CEF_IN_FILE_NAME": "../data/ERCO/ERCO_direct_emissions.csv",
         "FORECAST_IN_FILE_NAME": "../data/ERCO/ERCO_96hr_forecasts_DA.csv",
-        "LIFECYCLE_CEF_OUT_FILE_NAME_PREFIX": "../data/ERCO/ERCO_lifecycle_96hr_CI_forecasts",
-        "DIRECT_CEF_OUT_FILE_NAME_PREFIX": "../data/ERCO/ERCO_direct_96hr_CI_forecasts",
+        "LIFECYCLE_CEF_OUT_FILE_NAME_PREFIX": "../CI_forecast_data/ERCO/ERCO_lifecycle_96hr_CI_forecasts",
+        "DIRECT_CEF_OUT_FILE_NAME_PREFIX": "../CI_forecast_data/ERCO/ERCO_direct_96hr_CI_forecasts",
         "LOCAL_TIMEZONE": "US/Central",
         "NUM_FEATURES": 6,
         "NUM_FORECAST_FEATURES": 12,
@@ -81,8 +84,8 @@
         "LIFECYCLE_CEF_IN_FILE_NAME": "../data/ISNE/ISNE_lifecycle_emissions.csv",
         "DIRECT_CEF_IN_FILE_NAME": "../data/ISNE/ISNE_direct_emissions.csv",
         "FORECAST_IN_FILE_NAME": "../data/ISNE/ISNE_96hr_forecasts_DA.csv",
-        "LIFECYCLE_CEF_OUT_FILE_NAME_PREFIX": "../data/ISNE/ISNE_lifecycle_96hr_CI_forecasts",
-        "DIRECT_CEF_OUT_FILE_NAME_PREFIX": "../data/ISNE/ISNE_direct_96hr_CI_forecasts",
+        "LIFECYCLE_CEF_OUT_FILE_NAME_PREFIX": "../CI_forecast_data/ISNE/ISNE_lifecycle_96hr_CI_forecasts",
+        "DIRECT_CEF_OUT_FILE_NAME_PREFIX": "../CI_forecast_data/ISNE/ISNE_direct_96hr_CI_forecasts",
         "LOCAL_TIMEZONE": "US/Eastern",
         "NUM_FEATURES": 6,
         "NUM_FORECAST_FEATURES": 13,
@@ -93,8 +96,8 @@
         "LIFECYCLE_CEF_IN_FILE_NAME": "../data/SE/SE_lifecycle_emissions.csv",
         "DIRECT_CEF_IN_FILE_NAME": "../data/SE/SE_direct_emissions.csv",
         "FORECAST_IN_FILE_NAME": "../data/SE/SE_96hr_forecasts_DA.csv",
-        "LIFECYCLE_CEF_OUT_FILE_NAME_PREFIX": "../data/SE/SE_lifecycle_96hr_CI_forecasts",
-        "DIRECT_CEF_OUT_FILE_NAME_PREFIX": "../data/SE/SE_direct_96hr_CI_forecasts",
+        "LIFECYCLE_CEF_OUT_FILE_NAME_PREFIX": "../CI_forecast_data/SE/SE_lifecycle_96hr_CI_forecasts",
+        "DIRECT_CEF_OUT_FILE_NAME_PREFIX": "../CI_forecast_data/SE/SE_direct_96hr_CI_forecasts",
         "LOCAL_TIMEZONE": "CET",
         "NUM_FEATURES": 6,
         "NUM_FORECAST_FEATURES": 9,
@@ -105,8 +108,8 @@
         "LIFECYCLE_CEF_IN_FILE_NAME": "../data/DE/DE_lifecycle_emissions.csv",
         "DIRECT_CEF_IN_FILE_NAME": "../data/DE/DE_direct_emissions.csv",
         "FORECAST_IN_FILE_NAME": "../data/DE/DE_96hr_forecasts_DA.csv",
-        "LIFECYCLE_CEF_OUT_FILE_NAME_PREFIX": "../data/DE/DE_lifecycle_96hr_CI_forecasts",
-        "DIRECT_CEF_OUT_FILE_NAME_PREFIX": "../data/DE/DE_direct_96hr_CI_forecasts",
+        "LIFECYCLE_CEF_OUT_FILE_NAME_PREFIX": "../CI_forecast_data/DE/DE_lifecycle_96hr_CI_forecasts",
+        "DIRECT_CEF_OUT_FILE_NAME_PREFIX": "../CI_forecast_data/DE/DE_direct_96hr_CI_forecasts",
         "LOCAL_TIMEZONE": "CET",
         "NUM_FEATURES": 6,
         "NUM_FORECAST_FEATURES": 15,
@@ -117,8 +120,8 @@
         "LIFECYCLE_CEF_IN_FILE_NAME": "../data/AUS_QLD/AUS_QLD_lifecycle_emissions.csv",
         "DIRECT_CEF_IN_FILE_NAME": "../data/AUS_QLD/AUS_QLD_direct_emissions.csv",
         "FORECAST_IN_FILE_NAME": "../data/AUS_QLD/AUS_QLD_96hr_forecasts_DA.csv",
-        "LIFECYCLE_CEF_OUT_FILE_NAME_PREFIX": "../data/AUS_QLD/AUS_QLD_lifecycle_96hr_CI_forecasts",
-        "DIRECT_CEF_OUT_FILE_NAME_PREFIX": "../data/AUS_QLD/AUS_QLD_direct_96hr_CI_forecasts",
+        "LIFECYCLE_CEF_OUT_FILE_NAME_PREFIX": "../CI_forecast_data/AUS_QLD/AUS_QLD_lifecycle_96hr_CI_forecasts",
+        "DIRECT_CEF_OUT_FILE_NAME_PREFIX": "../CI_forecast_data/AUS_QLD/AUS_QLD_direct_96hr_CI_forecasts",
         "LOCAL_TIMEZONE": "UTC", // what is the time zone for AUS_QLD?
         "NUM_FEATURES": 6,
         "NUM_FORECAST_FEATURES": 12,
@@ -129,8 +132,8 @@
         "LIFECYCLE_CEF_IN_FILE_NAME": "../data/BPAT/BPAT_lifecycle_emissions.csv",
         "DIRECT_CEF_IN_FILE_NAME": "../data/BPAT/BPAT_direct_emissions.csv",
         "FORECAST_IN_FILE_NAME": "../data/BPAT/BPAT_96hr_forecasts.csv",
-        "LIFECYCLE_CEF_OUT_FILE_NAME_PREFIX": "../data/BPAT/BPAT_lifecycle_96hr_CI_forecasts",
-        "DIRECT_CEF_OUT_FILE_NAME_PREFIX": "../data/BPAT/BPAT_direct_96hr_CI_forecasts",
+        "LIFECYCLE_CEF_OUT_FILE_NAME_PREFIX": "../CI_forecast_data/BPAT/BPAT_lifecycle_96hr_CI_forecasts",
+        "DIRECT_CEF_OUT_FILE_NAME_PREFIX": "../CI_forecast_data/BPAT/BPAT_direct_96hr_CI_forecasts",
         "LOCAL_TIMEZONE": "US/Pacific",
         "NUM_FEATURES": 6,
         "NUM_FORECAST_FEATURES": 11,
@@ -141,8 +144,8 @@
         "LIFECYCLE_CEF_IN_FILE_NAME": "../data/ES/ES_lifecycle_emissions.csv",
         "DIRECT_CEF_IN_FILE_NAME": "../data/ES/ES_direct_emissions.csv",
         "FORECAST_IN_FILE_NAME": "../data/ES/ES_96hr_forecasts.csv",
-        "LIFECYCLE_CEF_OUT_FILE_NAME_PREFIX": "../data/ES/ES_lifecycle_96hr_CI_forecasts",
-        "DIRECT_CEF_OUT_FILE_NAME_PREFIX": "../data/ES/ES_direct_96hr_CI_forecasts",
+        "LIFECYCLE_CEF_OUT_FILE_NAME_PREFIX": "../CI_forecast_data/ES/ES_lifecycle_96hr_CI_forecasts",
+        "DIRECT_CEF_OUT_FILE_NAME_PREFIX": "../CI_forecast_data/ES/ES_direct_96hr_CI_forecasts",
         "LOCAL_TIMEZONE": "CET",
         "NUM_FEATURES": 6,
         "NUM_FORECAST_FEATURES": 14,
@@ -153,8 +156,8 @@
         "LIFECYCLE_CEF_IN_FILE_NAME": "../data/FPL/FPL_lifecycle_emissions.csv",
         "DIRECT_CEF_IN_FILE_NAME": "../data/FPL/FPL_direct_emissions.csv",
         "FORECAST_IN_FILE_NAME": "../data/FPL/FPL_96hr_forecasts.csv",
-        "LIFECYCLE_CEF_OUT_FILE_NAME_PREFIX": "../data/FPL/FPL_lifecycle_96hr_CI_forecasts",
-        "DIRECT_CEF_OUT_FILE_NAME_PREFIX": "../data/FPL/FPL_direct_96hr_CI_forecasts",
+        "LIFECYCLE_CEF_OUT_FILE_NAME_PREFIX": "../CI_forecast_data/FPL/FPL_lifecycle_96hr_CI_forecasts",
+        "DIRECT_CEF_OUT_FILE_NAME_PREFIX": "../CI_forecast_data/FPL/FPL_direct_96hr_CI_forecasts",
         "LOCAL_TIMEZONE": "US/Eastern",
         "NUM_FEATURES": 6,
         "NUM_FORECAST_FEATURES": 9,
@@ -165,8 +168,8 @@
         "LIFECYCLE_CEF_IN_FILE_NAME": "../data/NYISO/NYISO_lifecycle_emissions.csv",
         "DIRECT_CEF_IN_FILE_NAME": "../data/NYISO/NYISO_direct_emissions.csv",
         "FORECAST_IN_FILE_NAME": "../data/NYISO/NYISO_96hr_forecasts.csv",
-        "LIFECYCLE_CEF_OUT_FILE_NAME_PREFIX": "../data/NYISO/NYISO_lifecycle_96hr_CI_forecasts",
-        "DIRECT_CEF_OUT_FILE_NAME_PREFIX": "../data/NYISO/NYISO_direct_96hr_CI_forecasts",
+        "LIFECYCLE_CEF_OUT_FILE_NAME_PREFIX": "../CI_forecast_data/NYISO/NYISO_lifecycle_96hr_CI_forecasts",
+        "DIRECT_CEF_OUT_FILE_NAME_PREFIX": "../CI_forecast_data/NYISO/NYISO_direct_96hr_CI_forecasts",
         "LOCAL_TIMEZONE": "US/Eastern",
         "NUM_FEATURES": 6,
         "NUM_FORECAST_FEATURES": 11,
@@ -177,8 +180,8 @@
         "LIFECYCLE_CEF_IN_FILE_NAME": "../data/PL/PL_lifecycle_emissions.csv",
         "DIRECT_CEF_IN_FILE_NAME": "../data/PL/PL_direct_emissions.csv",
         "FORECAST_IN_FILE_NAME": "../data/PL/PL_96hr_forecasts.csv",
-        "LIFECYCLE_CEF_OUT_FILE_NAME_PREFIX": "../data/PL/PL_lifecycle_96hr_CI_forecasts",
-        "DIRECT_CEF_OUT_FILE_NAME_PREFIX": "../data/PL/PL_direct_96hr_CI_forecasts",
+        "LIFECYCLE_CEF_OUT_FILE_NAME_PREFIX": "../CI_forecast_data/PL/PL_lifecycle_96hr_CI_forecasts",
+        "DIRECT_CEF_OUT_FILE_NAME_PREFIX": "../CI_forecast_data/PL/PL_direct_96hr_CI_forecasts",
         "LOCAL_TIMEZONE": "CET",
         "NUM_FEATURES": 6,
         "NUM_FORECAST_FEATURES": 12,
@@ -189,8 +192,8 @@
         "LIFECYCLE_CEF_IN_FILE_NAME": "../data/NL/NL_lifecycle_emissions.csv",
         "DIRECT_CEF_IN_FILE_NAME": "../data/NL/NL_direct_emissions.csv",
         "FORECAST_IN_FILE_NAME": "../data/NL/NL_96hr_forecasts.csv",
-        "LIFECYCLE_CEF_OUT_FILE_NAME_PREFIX": "../data/NL/NL_lifecycle_96hr_CI_forecasts",
-        "DIRECT_CEF_OUT_FILE_NAME_PREFIX": "../data/NL/NL_direct_96hr_CI_forecasts",
+        "LIFECYCLE_CEF_OUT_FILE_NAME_PREFIX": "../CI_forecast_data/NL/NL_lifecycle_96hr_CI_forecasts",
+        "DIRECT_CEF_OUT_FILE_NAME_PREFIX": "../CI_forecast_data/NL/NL_direct_96hr_CI_forecasts",
         "LOCAL_TIMEZONE": "CET",
         "NUM_FEATURES": 6,
         "NUM_FORECAST_FEATURES": 12,
