--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ src/CarbonCastAPI/__pycache__/
 src/CarbonCastAPI/CarbonCastAPI/__pycache__/
 src/CarbonCastAPI/CarbonCastRESTAPI/__pycache__/
 src/CarbonCastAPI/CarbonCastRESTAPI/migrations/__pycache__/
+src/CarbonCastAPI/db.sqlite3
