--- a/src/CarbonCastAPI/dockerfile
+++ b/src/CarbonCastAPI/dockerfile
@@ -1,16 +1,17 @@
 FROM python:3.11.4-alpine
 
-WORKDIR /CarbonCastAPI
+WORKDIR /CarbonCast
 
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
-COPY . .
+COPY ./src/CarbonCastAPI/ /CarbonCast/src/CarbonCastAPI/
+COPY ./real_time/ /CarbonCast/real_time/
 
-RUN pip install -r requirements.txt
-RUN python manage.py makemigrations
-RUN python manage.py migrate
+RUN pip install -r src/CarbonCastAPI/requirements.txt
+RUN python src/CarbonCastAPI/manage.py makemigrations
+RUN python src/CarbonCastAPI/manage.py migrate
 
-ENTRYPOINT ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+ENTRYPOINT ["python", "src/CarbonCastAPI/manage.py", "runserver", "0.0.0.0:8000"]
 
 EXPOSE 8000
